создание некоторых пакетов, сущностей, мест хранений данных

--- a/auto_service/.project
+++ b/auto_service/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>task 1</name>
+	<name>auto_service</name>
 	<comment></comment>
 	<projects>
 	</projects>
