добавлено поле свободных мест в гараже, сортировки для мастера и пару штук для заказа

--- a/auto_service/.project
+++ b/auto_service/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>auto_service</name>
+	<name>AutoService</name>
 	<comment></comment>
 	<projects>
 	</projects>
