--- a/UI/.classpath
+++ b/UI/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/AutoService"/>
 	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/log4j/log4j-core-2.9.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/log4j/log4j-api-2.9.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Configuration"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
