добавил реализацию интерфейса Serializable, скорректировал конфиг и его загрузку

--- a/UI/config.properties
+++ b/UI/config.properties
@@ -1,4 +1,5 @@
-serializerFilePath = 
+serializerFilePath = data/
+serializerFileName = datafile.txt
 shiftOrderTimeEnabled = true
 createDeleteSitEnabled = true
 deleteOrderEnabled = true
