написал модуль для работы с аннотациями

--- a/UI/config.properties
+++ b/UI/config.properties
@@ -3,3 +3,7 @@ serializerFileName = datafile.txt
 shiftOrderTimeEnabled = true
 createDeleteSitEnabled = true
 deleteOrderEnabled = true
+Test.isBlaBlaEnabled = true
+Test.int = 12
+Test.long = 11
+Test.collection = 13
