--- a/UI/.classpath
+++ b/UI/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/log4j/log4j-api-2.9.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Configuration"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Serialisation"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AutoServiceAnnotation"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
