добавил строки конфигурации в классы

--- a/UI/config.properties
+++ b/UI/config.properties
@@ -1,9 +1,9 @@
 UIController.serializerFilePath = data/
 UIController.serializerFileName = datafile.txt
 com.senla.ui.observer.interfaces.IObservable = com.senla.ui.observer.UIObservable
-MenuBuilder.shiftOrderTimeEnabled = false
-MenuBuilder.createDeleteSitEnabled = false
-MenuBuilder.deleteOrderEnabled = false
+MenuBuilder.isShiftOrderTimeEnabled = true
+MenuBuilder.isCreateDeleteSitEnabled = true
+MenuBuilder.isDeleteOrderEnabled = true
 Test.isBlaBlaEnabled = true
 Test.int = 12
 Test.long = 11
