--- a/UI/resources/system.properties
+++ b/UI/resources/system.properties
@@ -1,1 +1,2 @@
 com.senla.ui.observer.interfaces.IObservable = com.senla.ui.observer.UIObservable
+com.senla.controller.IController = com.senla.controller.Controller
