--- a/auto_service/.classpath
+++ b/auto_service/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DependencyInjection"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AutoServiceAnnotation"/>
+	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/auto_service/textFileWorker.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
