--- a/annotation/.classpath
+++ b/annotation/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DependencyInjection"/>
+	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/log4j/log4j-api-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kowka/Documents/SENLA-course/log4j/log4j-core-2.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
