--- a/client/.classpath
+++ b/client/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AutoServiceAnnotation"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MessageHandler"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DependencyInjection"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Observer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/UserInterface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Message"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
