--- a/dependency/resources/loggers.properties
+++ b/dependency/resources/loggers.properties
@@ -1,1 +1,1 @@
-UIObservable.observers = com.senla.ui.observer.ErrorLogger com.senla.ui.observer.InfoLogger com.senla.ui.observer.ConsoleDisplayer
+UIObservable.observers = observer.ErrorLogger observer.InfoLogger observer.ConsoleDisplayer
