--- a/dependency/resources/system.properties
+++ b/dependency/resources/system.properties
@@ -1,1 +1,2 @@
-com.senla.ui.observer.interfaces.IObservable = com.senla.ui.observer.UIObservable
+observer.interfaces.IObservable = observer.UIObservable
+api.ClientSocket = com.client.AutoServiceClientSocket
