--- a/serialisation/.classpath
+++ b/serialisation/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AutoService"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Configuration"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DependencyInjection"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
