--- a/UI/config.properties
+++ b/UI/config.properties
@@ -9,6 +9,6 @@ Test.int = 12
 Test.long = 11
 Test.collection = 13
 Test.array = 12 10 14 199
-UIObservable.observers = com.senla.ui.observer.InfoLogger com.senla.ui.observer.ConsoleDisplayer
-UIObservable.exceptionObservers = com.senla.ui.observer.ErrorLogger
-Test.list = com.senla.ui.observer.ErrorLogger com.senla.ui.observer.InfoLogger com.senla.ui.observer.ConsoleDisplayer
+com.senla.observer.list = com.senla.observer.ErrorLogger com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
+UIObservable.observers = com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
+UIObservable.exceptionObservers = com.senla.observer.ErrorLogger
