--- a/client/resources/system.properties
+++ b/client/resources/system.properties
@@ -1,4 +1,2 @@
-observer.interfaces.IObservable = observer.UIObservable
-api.ClientSocket = com.client.AutoServiceClientSocket
-AutoServiceClientSocket.port = 6565
-AutoServiceClientSocket.port = 127.0.0.1
+com.senla.observer.interfaces.IObservable = com.senla.observer.UIObservable
+handler.MessageHandler = com.senla.client.Handler
