--- a/dependency/resources/system.properties
+++ b/dependency/resources/system.properties
@@ -1,2 +1,3 @@
 observer.interfaces.IObservable = observer.UIObservable
 api.ClientSocket = com.client.AutoServiceClientSocket
+com.senla.controller.IController = com.senla.controller.Controller
