--- a/client/config.properties
+++ b/client/config.properties
@@ -1,14 +1,6 @@
-UIController.serializerFilePath = data/
-UIController.serializerFileName = datafile.txt
-com.senla.ui.observer.interfaces.IObservable = com.senla.ui.observer.UIObservable
-MenuBuilder.isShiftOrderTimeEnabled = true
-MenuBuilder.isCreateDeleteSitEnabled = true
-MenuBuilder.isDeleteOrderEnabled = true
-Test.isBlaBlaEnabled = true
-Test.int = 12
-Test.long = 11
-Test.collection = 13
-Test.array = 12 10 14 199
-UIObservable.observers = com.senla.ui.observer.InfoLogger com.senla.ui.observer.ConsoleDisplayer
-UIObservable.exceptionObservers = com.senla.ui.observer.ErrorLogger
-Test.list = com.senla.ui.observer.ErrorLogger com.senla.ui.observer.InfoLogger com.senla.ui.observer.ConsoleDisplayer
+AutoServiceClientSocket.port = 6565
+AutoServiceClientSocket.ip = 127.0.0.1
+com.senla.observer.list = com.senla.observer.ErrorLogger com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
+UIObservable.observers = com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
+UIObservable.exceptionObservers = com.senla.observer.ErrorLogger
+handler.MessageHandler = com.senla.client.Handler
