переделал синхронизацию (на уровне сервисов)

--- a/UI/config.properties
+++ b/UI/config.properties
@@ -12,3 +12,4 @@ Test.array = 12 10 14 199
 com.senla.observer.list = com.senla.observer.ErrorLogger com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
 UIObservable.observers = com.senla.observer.InfoLogger com.senla.observer.ConsoleDisplayer
 UIObservable.exceptionObservers = com.senla.observer.ErrorLogger
+handler.MessageHandler = com.senla.client.Handler
