--- a/maven/database/pom.xml
+++ b/maven/database/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.7.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.senla.course</groupId>
+			<artifactId>entity</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
