--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.senla.course</groupId>
 	<artifactId>auto-service</artifactId>
@@ -11,14 +11,16 @@
 		<module>annotation</module>
 		
 		<module>message</module>
-		<module>server</module>
+		
 		<module>dao</module>
 		<module>database</module>
 		<module>entity</module>
 		<module>controller</module>
-		<module>client</module>
-		<module>ui</module>
-	</modules>
+		
+		
+    
+    <module>webapps</module>
+  </modules>
 	<build>
 		<plugins>
 			<plugin>
