--- a/maven/dao/pom.xml
+++ b/maven/dao/pom.xml
@@ -18,11 +18,12 @@
 			<artifactId>database</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
-		
-<!-- https://mvnrepository.com/artifact/com.fasterxml/classmate -->
-
-
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.10.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.senla.course</groupId>
 			<artifactId>entity</artifactId>
