--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 database/config.properties
 database/src/com/senla/Test.java
 UI/src/com/senla/ui/test/TestClass.java
+.metadata/
+Servers2/
+.recommenders/
