--- a/maven/webapps/src/main/webapp/WEB-INF/web.xml
+++ b/maven/webapps/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
 
 <filter>
     <filter-name>JWTFilter</filter-name>
-    <filter-class>dto.JWTFilter</filter-class>
+    <filter-class>jwt.JWTFilter</filter-class>
 </filter>
 
 <filter-mapping>
