--- a/maven/webapps/src/main/webapp/WEB-INF/web.xml
+++ b/maven/webapps/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,12 @@
    </context-param>
 
    <listener>
+        <listener-class>
+        org.springframework.web.context.request.RequestContextListener
+        </listener-class>
+   </listener>
+   
+   <listener>
       <listener-class>
          org.springframework.web.context.ContextLoaderListener
       </listener-class>
@@ -34,7 +40,6 @@
     <filter-name>CORSFilter</filter-name>
     <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
 </filter>
-
 <filter-mapping>
     <filter-name>CORSFilter</filter-name>
     <url-pattern>/*</url-pattern>
@@ -44,7 +49,6 @@
     <filter-name>JWTFilter</filter-name>
     <filter-class>jwt.JWTFilter</filter-class>
 </filter>
-
 <filter-mapping>
     <filter-name>JWTFilter</filter-name>
     <url-pattern>/api/*</url-pattern>
