--- a/maven/controller/pom.xml
+++ b/maven/controller/pom.xml
@@ -22,5 +22,10 @@
   		<artifactId>annotation</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.senla.course</groupId>
+  		<artifactId>context</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
