--- a/maven/webapps/pom.xml
+++ b/maven/webapps/pom.xml
@@ -82,6 +82,11 @@
 			<version>2.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.senla.course</groupId>
+			<artifactId>context</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>webapps</finalName>
